examples/test/testpolicy14151.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14151
  namespace: namespace248
spec:
  podSelector:
    matchLabels:
      key13: value38
      key6: value37
      key4: value49
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key32: value21
      podSelector:
        matchLabels:
          key39: value41
          key25: value23
